HTML CSS Clean Up

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li>
-          <svg class="icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="24px"
+          <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="24px"
              viewBox="0 0 28 24" style="enable-background:new 0 0 28 24;" xml:space="preserve">
           <style type="text/css">
             .stx{fill:#39ADD1;}
@@ -26,7 +26,7 @@
         </li>
 
         <li>
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px"
+          <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px"
              viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
           <style type="text/css">
             .stx{fill:#39ADD1;}
@@ -40,7 +40,7 @@
         </li>
 
         <li>
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="24px"
+          <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="24px"
              viewBox="0 0 28 24" style="enable-background:new 0 0 28 24;" xml:space="preserve">
           <style type="text/css">
             .stx{fill:#39ADD1;}
@@ -128,9 +128,8 @@
         <h2>
           Coat Colors
         </h2>
-        <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	  style="display:none" xml:space="preserve">
 
 <symbol id="corgi" viewBox="0 0 170 170">
@@ -165,27 +164,27 @@
 
     <svg width="140" height="140">
         <use xlink:href= "#corgi" class="sable"/>
-        <h3>Sable</h3>
     </svg>
+        <h3>Sable</h3>
 </div>
 
 <div class="kennel">
   <svg width="140" height="140">
         <use xlink:href= "#corgi" class="fawn"/>
-        <h3>Fawn</h3>
   </svg>
+  <h3>Fawn</h3>
 </div>
 <div class="kennel">
   <svg width="140" height="140">
         <use xlink:href= "#corgi" class="red"/>
-        <h3>Red</h3>
   </svg>
+  <h3>Red</h3>
 </div>
 <div class="kennel">
   <svg width="140" height="140">
         <use xlink:href= "#corgi" class="stone"/>
-        <h3>Stone</h3>
   </svg>
+    <h3>Stone</h3>
 </div>
 
         <p>
